manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
        name: zefir-server-ingress
        annotations:
                #cert-manager.io/issuer: "letsencrypt-staging"
spec:
        ingressClassName: nginx
        tls:
                - hosts:
                          - server.zefir.iedre.net
                  secretName: quickstart-example-tls
        rules:
                - host: server.zefir.iedre.net
                  http:
                          paths:
                                  - path: /
                                    pathType: Prefix
                                    backend:
                                            service:
                                                    name: zefir-server-service
                                                    port:
                                                            number: 3000
